feat: redis fully configurated