@@ -11,6 +11,10 @@ import com.produto_service.repository.ProdutoRepository;
 import org.hibernate.QueryTimeoutException;
 import org.springframework.amqp.AmqpException;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.cache.CacheManager;
+import org.springframework.cache.annotation.CacheEvict;
+import org.springframework.cache.annotation.Cacheable;
+import org.springframework.cache.annotation.Caching;
 import org.springframework.dao.TransientDataAccessException;
 import org.springframework.resilience.annotation.Retryable;
 import org.springframework.stereotype.Service;
@@ -20,6 +24,7 @@ import org.springframework.transaction.annotation.Transactional;
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 public class ProdutoService {
@@ -30,6 +35,10 @@ public class ProdutoService {
     @Autowired
     ProdutoProducer produtoProducer;
 
+    @Autowired
+    CacheManager cacheManager;
+
+    @CacheEvict(value = "produtos", allEntries = true)
     public CreateProdutoDTO criarProduto(CreateProdutoDTO novo_produto) {
         Produto produto = new Produto();
         produto.setNomeProduto(novo_produto.nomeProduto());
@@ -40,24 +49,33 @@ public class ProdutoService {
         return novo_produto;
     }
 
+    @Cacheable(value = "produto", key = "#id")
     public RecoveryProdutoDTO buscarProduto(long id) {
         Produto produto = produtoRepository.findById(id).orElseThrow();
-        return new RecoveryProdutoDTO(produto.getNomeProduto(),
+        return new RecoveryProdutoDTO(produto.getId(),
+                produto.getNomeProduto(),
                 produto.getDescricaoProduto(),
                 produto.getQuantidadeEmEstoque(),
                 produto.getPrecoProduto());
     }
 
+    @Cacheable(value = "produtos")
     public List<RecoveryProdutoDTO> listarProdutos() {
         List<Produto> produtos = produtoRepository.findAll();
-        return produtos
-                .stream()
-                .map(p -> new RecoveryProdutoDTO(p.getNomeProduto(),
-                        p.getDescricaoProduto(), p.getQuantidadeEmEstoque(),
+        return produtos.stream()
+                .map(p -> new RecoveryProdutoDTO(
+                        p.getId(),
+                        p.getNomeProduto(),
+                        p.getDescricaoProduto(),
+                        p.getQuantidadeEmEstoque(),
                         p.getPrecoProduto()))
-                .toList();
+                .collect(Collectors.toList());
     }
 
+    @Caching(evict = {
+        @CacheEvict(value = "produto", key = "#id"),
+        @CacheEvict(value = "produtos", allEntries = true)
+    })
     public void deletarProduto(long id) {
         try {
             produtoRepository.deleteById(id);
@@ -78,6 +96,22 @@ public class ProdutoService {
 
             produto.setQuantidadeEmEstoque(novaQuantidade);
             produtoRepository.save(produto);
+            RecoveryProdutoDTO produtoAtualizado = new RecoveryProdutoDTO(
+                    produto.getId(),
+                    produto.getNomeProduto(),
+                    produto.getDescricaoProduto(),
+                    produto.getQuantidadeEmEstoque(),
+                    produto.getPrecoProduto()
+            );
+            var cacheProduto = cacheManager.getCache("produto");
+            if (cacheProduto != null) {
+                cacheProduto.put(id, produtoAtualizado);
+            }
+
+            var cacheLista = cacheManager.getCache("produtos");
+            if (cacheLista != null) {
+                cacheLista.clear();
+            }
 
         } catch (CannotCreateTransactionException | QueryTimeoutException | TransientDataAccessException |
                  AmqpException e) {
